update readme and gitignore